[package]
name = 'tok'
version = '0.3.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'tok'

[dependencies]
extendr-api = {git = "https://github.com/extendr/extendr.git", features = ["serde"]}
tokenizers = {version = '0.13.3', features = ["onig", "esaxx_fast", "progressbar"], default-features = false}
serde = "*"