[package]
name = 'tok'
version = '0.3.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'tok'

[dependencies]
extendr-api = {git = "https://github.com/dfalbel/extendr", rev = "f7a6d4d"}
tokenizers = {version = '0.13.3', features = ["onig", "esaxx_fast", "progressbar"], default-features = false}