[package]
name = 'tok'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.81.0'

[lib]
crate-type = [ 'staticlib' ]
name = 'tok'

[dependencies]
extendr-api = '0.8.1'
tokenizers = {version = '0.20.3', features = ["onig", "esaxx_fast", "progressbar"], default-features = false}

[profile.release]
lto = true
codegen-units = 1
